--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "license": "proprietary",
   "private": true,
   "scripts": {
-    "dev": "yarn run development",
+    "dev": "run-s development",
     "development": "cross-env NODE_ENV=development webpack-cli --progress --mode=development",
-    "watch": "yarn run development --watch",
+    "watch": "NODE_ENV=development webpack-cli --progress --mode=development --watch",
     "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
-    "prod": "yarn run production",
+    "prod": "run-s production",
     "production": "cross-env NODE_ENV=production webpack-cli --mode=production",
     "analyse-development": "cross-env NODE_ENV=development webpack-cli --mode=development --profile --json",
     "analyse-production": "cross-env NODE_ENV=production webpack-cli --mode=production --profile --json",
@@ -50,6 +50,7 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.1",
     "postcss-flexbugs-fixes": "^5.0.1",
     "postcss-loader": "^6.2.0",
