fix: doctrine: serverVersion

--- a/src/config/common/ext/nettrine.dbal.neon
+++ b/src/config/common/ext/nettrine.dbal.neon
@@ -13,6 +13,7 @@ nettrine.dbal:
         user: %database.username%
         password: %database.password%
         dbname: %database.dbname%
+        serverVersion: '14.2'
         charset: UTF8
         types:
             uuid:
