--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "guzzlehttp/psr7": "^2.2.1",
     "http-interop/http-factory-guzzle": "^1.2.0",
     "jean85/pretty-package-versions": "^1.6.0",
+    "kdyby/fake-session": "^3.0",
     "laminas/laminas-code": "^4.5.1",
     "laminas/laminas-diactoros": "^2.10.0",
     "laminas/laminas-eventmanager": "^3.5.0",
@@ -117,6 +118,7 @@
     "phpstan/phpstan-symfony": "^1.1.8",
     "phpunit/phpunit": "^9.5.20",
     "rector/rector": "^v0.12.23@dev",
+    "rector/swiss-knife": "^2.1",
     "roave/security-advisories": "dev-master",
     "slam/phpstan-extensions": "^6.0.0",
     "slevomat/coding-standard": "dev-master",
