--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,26 @@
 .git
+.idea
+.data
 .github
-
 node_modules
-vendor
-
 public/dist/*
+vendor/
+
+**/*.log
+**/*.md
+**/*.php~
+**/.DS_Store
+**/._*
+**/.git/
+**/.gitattributes
+**/.gitmodules
+**/Dockerfile
+**/Thumbs.db
+**/docker-compose.*.yaml
+**/docker-compose.*.yml
+**/docker-compose.yaml
+**/docker-compose.yml
+
+.dockerignore
+.editorconfig
+.gitignore
