--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,51 +3,48 @@ volumes:
   redis:
 
 services:
+  php:
+    image: vspoint/php:8.4-fpm-dev
+    build:
+      context: .
+      dockerfile: ./.docker/dev/Dockerfile
+    depends_on:
+      - db
+      - redis
+    volumes:
+      - .:/srv
+      - ./.docker/dev/php/conf.d/99-extra.ini:/usr/local/etc/php/conf.d/99-extra.ini
+      #- ./.docker/dev/php/php-fpm.d/99-extra.ini:/usr/local/etc/php-fpm.d/99-extra.ini
+      #- ./.docker/dev/php/php-fpm.d/zz-docker.conf:/usr/local/etc/php-fpm.d/zz-docker.conf
+      #- ./.k8s/overlays/dev/configmap/php/conf.d/99-extra.ini:/usr/local/etc/php/conf.d/99-extra.ini
+    working_dir: /srv
+    user: ${UID:-1000}:${GID:-1000}
+
   nginx:
-    image: nginx:1.21.6-alpine
-    restart: always
+    image: nginx:1.27.3-alpine
     ports:
       - 80:80
-    volumes:
-      - .:/srv
-      - ./.k8s/base/configmap/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
-
-  php:
-    image: davidsolc/php:8.1-fpm-dev
-    restart: always
     volumes:
-      - .:/srv
-      - ./.k8s/overlays/dev/configmap/php/conf.d/99-extra.ini:/usr/local/etc/php/conf.d/99-extra.ini
-    working_dir: /srv
-    user: 1000:1000
-    depends_on:
-      - redis
+      - ./public:/srv/public
+      - ./.docker/dev/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      #- ./.k8s/base/configmap/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
 
   db:
-    image: postgres:14.2-alpine
-    restart: always
-    volumes:
-      - db:/var/lib/postgresql/data
+    image: postgres:17.4-alpine
     ports:
       - 5432:5432
+    volumes:
+      - db:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASS}
       POSTGRES_DB: ${DB_NAME}
 
   redis:
-    image: redis:6.2.6-alpine
+    image: redis:7.4.2-alpine
     ports:
       - 6379:6379
     volumes:
       - redis:/data
-
-networks:
-  default:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 172.24.0.0/16
