composer: deps: upgrade

--- a/composer.json
+++ b/composer.json
@@ -1,147 +1,142 @@
 {
-  "name": "vspoint/web",
+  "name": "vspoint/nette-skeleton",
   "type": "project",
   "description": "",
   "license": "proprietary",
   "version": "0.1.0",
   "require": {
-    "php": "^8.1",
+    "php": ">=8.4",
     "brick/brick": "dev-master",
-    "brick/date-time": "^0.4.0",
-    "brick/math": "^0.9.3",
-    "brick/money": "^0.5.3",
-    "composer/ca-bundle": "^1.3.1",
-    "contributte/application": "^0.5.1@dev",
-    "contributte/console": "^0.9.2@dev",
-    "contributte/console-extra": "^0.7.1@dev",
-    "contributte/di": "^0.5.1@dev",
-    "contributte/event-dispatcher": "^0.8.1@dev",
-    "contributte/event-dispatcher-extra": "^0.8.2@dev",
-    "contributte/flysystem": "^0.4.0@dev",
-    "contributte/forms-bootstrap": "^0.3.2@dev",
-    "contributte/guzzlette": "^3.2.2@dev",
-    "contributte/monolog": "^0.5.0@dev",
-    "contributte/psr11-container-interface": "^0.5.0@dev",
-    "contributte/redis": "^0.5.1@dev",
-    "contributte/translation": "^2.0.0@dev",
-    "contributte/webpack": "^2.1.1",
-    "doctrine/annotations": "^1.13.2",
-    "doctrine/cache": "^1.12.1",
-    "doctrine/collections": "^1.6.8",
-    "doctrine/common": "^3.3.0",
-    "doctrine/data-fixtures": "^1.5.3",
-    "doctrine/dbal": "^3.3.6",
-    "doctrine/event-manager": "^1.1.1",
-    "doctrine/migrations": "^3.5.1",
-    "doctrine/orm": "^2.12.2",
-    "doctrine/persistence": "^3.0.2",
-    "guzzlehttp/guzzle": "^7.4.2",
-    "guzzlehttp/psr7": "^2.2.1",
-    "http-interop/http-factory-guzzle": "^1.2.0",
-    "jean85/pretty-package-versions": "^1.6.0",
-    "laminas/laminas-code": "^4.5.1",
-    "laminas/laminas-diactoros": "^2.10.0",
-    "laminas/laminas-eventmanager": "^3.5.0",
-    "laminas/laminas-httphandlerrunner": "^1.5.0",
-    "laminas/laminas-stratigility": "^3.5.0",
-    "latte/latte": "^2.11.3",
-    "league/flysystem": "^3.5.1",
-    "middlewares/fast-route": "^v2.0.1",
-    "middlewares/negotiation": "^2.1.0",
-    "middlewares/payload": "^3.0.1",
-    "middlewares/request-handler": "^2.0.2",
-    "middlewares/response-time": "^2.0.1",
-    "middlewares/trailing-slash": "^2.0.1",
-    "monolog/monolog": "^2.6.0",
-    "nette/application": "^3.1.5",
-    "nette/bootstrap": "^3.1.2",
-    "nette/caching": "^3.1.2",
-    "nette/component-model": "^3.0.2",
-    "nette/di": "^3.0.13",
-    "nette/finder": "^2.5.3",
-    "nette/forms": "^3.1.6",
-    "nette/http": "^3.1.6",
-    "nette/neon": "^3.3.3",
-    "nette/php-generator": "^4.0.1",
-    "nette/routing": "^3.0.3",
-    "nette/schema": "^1.2.2",
-    "nette/security": "^3.1.5",
-    "nette/utils": "^3.2.7",
-    "nettrine/annotations": "^0.7.0@dev",
-    "nettrine/cache": "^0.3.0@dev",
-    "nettrine/dbal": "^0.8.0@dev",
-    "nettrine/fixtures": "^0.6.2@dev",
-    "nettrine/migrations": "^0.8.0@dev",
-    "nettrine/orm": "^0.8.3@dev",
-    "nikic/fast-route": "^1.3.0",
-    "nikic/php-parser": "^4.13.2",
+    "brick/date-time": "^0.7",
+    "brick/math": "^0.12",
+    "brick/money": "^0.10",
+    "composer/ca-bundle": "^1.3",
+    "contributte/application": "^0.5@dev",
+    "contributte/console": "^0.10",
+    "contributte/console-extra": "^0.8",
+    "contributte/di": "^0.5@dev",
+    "contributte/event-dispatcher": "^0.9",
+    "contributte/event-dispatcher-extra": "^0.10",
+    "contributte/flysystem": "^0.3",
+    "contributte/forms-bootstrap": "^0.8",
+    "contributte/guzzlette": "^3.2@dev",
+    "contributte/monolog": "^0.5@dev",
+    "contributte/psr11-container-interface": "^0.6",
+    "contributte/redis": "^0.6",
+    "contributte/translation": "^2.0@dev",
+    "contributte/webpack": "^2.1",
+    "dg/composer-frontline": "^0.2",
+    "doctrine/annotations": "^2.0",
+    "doctrine/cache": "^2.2",
+    "doctrine/collections": "^2.2",
+    "doctrine/common": "^3.3",
+    "doctrine/data-fixtures": "^2.0",
+    "doctrine/dbal": "^4.2",
+    "doctrine/event-manager": "^2.0",
+    "doctrine/migrations": "^3.5",
+    "doctrine/orm": "^3.3",
+    "doctrine/persistence": "^4.0",
+    "guzzlehttp/guzzle": "^7.4",
+    "guzzlehttp/psr7": "^2.2",
+    "http-interop/http-factory-guzzle": "^1.2",
+    "jean85/pretty-package-versions": "^2.1",
+    "laminas/laminas-code": "^4.5",
+    "laminas/laminas-diactoros": "^3.5",
+    "laminas/laminas-eventmanager": "^3.5",
+    "laminas/laminas-httphandlerrunner": "^2.11",
+    "laminas/laminas-stratigility": "^4.1",
+    "latte/latte": "^3.0",
+    "league/flysystem": "^3.5",
+    "monolog/monolog": "^3.8",
+    "nette/application": "^3.1",
+    "nette/bootstrap": "^3.1",
+    "nette/caching": "^3.1",
+    "nette/component-model": "^3.0",
+    "nette/di": "^3.0",
+    "nette/finder": "^3.0",
+    "nette/forms": "^3.1",
+    "nette/http": "^3.1",
+    "nette/neon": "^3.3",
+    "nette/php-generator": "^4.0",
+    "nette/routing": "^3.0",
+    "nette/schema": "^1.2",
+    "nette/security": "^3.1",
+    "nette/utils": "^4.0",
+    "nettrine/annotations": "^0.9",
+    "nettrine/cache": "^0.5",
+    "nettrine/dbal": "^0.10",
+    "nettrine/fixtures": "^0.8",
+    "nettrine/migrations": "^0.10",
+    "nettrine/orm": "^0.10",
+    "nikic/fast-route": "^1.3",
+    "nikic/php-parser": "^5.4",
     "php-ds/php-ds": "dev-master",
-    "php-http/guzzle7-adapter": "^0.1.1",
-    "psr/container": "^1.1.2",
-    "psr/http-factory": "^1.0.1",
-    "psr/http-message": "^1.0.1",
-    "psr/log": "^1.1.4",
-    "psr/simple-cache": "^1.0.1",
-    "ramsey/uuid": "^4.3.1",
-    "ramsey/uuid-doctrine": "^1.8.1",
-    "relay/relay": "^2.1.2",
-    "sentry/sdk": "^3.1.1",
-    "sentry/sentry": "^3.4.0",
-    "solcik/extras": "dev-master",
-    "symfony/console": "^5.4.8",
-    "symfony/event-dispatcher": "^5.4.3",
-    "symfony/http-foundation": "^5.4.8",
-    "symfony/psr-http-message-bridge": "^2.1.2",
-    "symfony/string": "^6.0.8",
-    "symfony/translation": "^6.0.8",
-    "texy/texy": "^3.1.5",
-    "thecodingmachine/safe": "^2.1.4",
-    "tracy/tracy": "^2.9.2",
-    "vlucas/phpdotenv": "^5.4.1",
-    "willdurand/negotiation": "^3.1.0"
+    "php-http/guzzle7-adapter": "^1.1",
+    "psr/container": "^2.0",
+    "psr/http-factory": "^1.0",
+    "psr/http-message": "^2.0",
+    "psr/log": "^3.0",
+    "psr/simple-cache": "^3.0",
+    "ramsey/uuid": "^4.3",
+    "ramsey/uuid-doctrine": "^2.1",
+    "relay/relay": "^3.0",
+    "sentry/sdk": "^4.0",
+    "sentry/sentry": "^4.10",
+    "solcik/extras": "^0.5",
+    "symfony/console": "^7.2",
+    "symfony/event-dispatcher": "^7.2",
+    "symfony/http-foundation": "^7.2",
+    "symfony/psr-http-message-bridge": "^7.2",
+    "symfony/string": "^7.2",
+    "symfony/translation": "^7.2",
+    "texy/texy": "^3.1",
+    "thecodingmachine/safe": "^3.0",
+    "tracy/tracy": "^2.9",
+    "vlucas/phpdotenv": "^5.4",
+    "willdurand/negotiation": "^3.1"
   },
   "require-dev": {
-    "composer/composer": "^2.3.5",
+    "composer/composer": "^2.3",
     "jetbrains/phpstorm-stubs": "dev-master",
-    "mockery/mockery": "^1.5.0",
-    "pepakriz/phpstan-exception-rules": "^0.12.0",
-    "php-parallel-lint/php-console-highlighter": "^0.5.0",
-    "php-parallel-lint/php-parallel-lint": "^1.3.2",
-    "phpstan/phpstan": "^1.6.8",
-    "phpstan/phpstan-deprecation-rules": "^1.0.0",
-    "phpstan/phpstan-doctrine": "^1.3.1",
-    "phpstan/phpstan-mockery": "^1.1.0",
-    "phpstan/phpstan-nette": "^1.0.0",
-    "phpstan/phpstan-phpunit": "^1.1.1",
-    "phpstan/phpstan-strict-rules": "^1.2.3",
-    "phpstan/phpstan-symfony": "^1.1.8",
-    "phpunit/phpunit": "^9.5.20",
-    "rector/rector": "^v0.12.23@dev",
+    "mockery/mockery": "^1.5",
+    "php-parallel-lint/php-console-highlighter": "^1.0",
+    "php-parallel-lint/php-parallel-lint": "^1.3",
+    "phpstan/phpstan": "^2.1",
+    "phpstan/phpstan-deprecation-rules": "^2.0",
+    "phpstan/phpstan-doctrine": "^2.0",
+    "phpstan/phpstan-mockery": "^2.0",
+    "phpstan/phpstan-nette": "^2.0",
+    "phpstan/phpstan-phpunit": "^2.0",
+    "phpstan/phpstan-strict-rules": "^2.0",
+    "phpstan/phpstan-symfony": "^2.0",
+    "phpunit/phpunit": "^12.0",
+    "rector/rector": "^2.0",
     "rector/swiss-knife": "^2.1",
     "roave/security-advisories": "dev-master",
-    "slam/phpstan-extensions": "^6.0.0",
+    "slam/phpstan-extensions": "^6.0",
     "slevomat/coding-standard": "dev-master",
-    "spaze/phpstan-disallowed-calls": "^v2.3.2",
-    "symplify/easy-coding-standard": "^10.2.3",
-    "thecodingmachine/phpstan-safe-rule": "^1.2.0",
-    "thecodingmachine/phpstan-strict-rules": "^1.0.0"
+    "spaze/phpstan-disallowed-calls": "^4.4",
+    "symplify/easy-coding-standard": "^12.5",
+    "thecodingmachine/phpstan-safe-rule": "^1.2"
   },
   "config": {
     "optimize-autoloader": true,
     "sort-packages": true,
     "allow-plugins": {
       "composer/package-versions-deprecated": false,
-      "dealerdirect/phpcodesniffer-composer-installer": false
+      "dealerdirect/phpcodesniffer-composer-installer": false,
+      "dg/composer-frontline": true,
+      "php-http/discovery": true
     }
   },
   "autoload": {
     "psr-4": {
-      "VsPoint\\": "src/VsPoint"
+      "VsPoint\\": "src/VsPoint/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "VsPoint\\Test\\": "tests"
+      "VsPoint\\Test\\": "tests/"
     }
   },
   "minimum-stability": "dev",
