--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
     "laminas/laminas-stratigility": "^4.1",
     "latte/latte": "^3.0",
     "league/flysystem": "^3.5",
+    "loophp/collection": "^7.6",
     "monolog/monolog": "^3.8",
     "nette/application": "^3.1",
     "nette/bootstrap": "^3.1",
@@ -70,7 +71,6 @@
     "nettrine/orm": "^0.10",
     "nikic/fast-route": "^1.3",
     "nikic/php-parser": "^5.4",
-    "php-ds/php-ds": "dev-master",
     "php-http/guzzle7-adapter": "^1.1",
     "psr/container": "^2.0",
     "psr/http-factory": "^1.0",
@@ -83,6 +83,7 @@
     "sentry/sdk": "^4.0",
     "sentry/sentry": "^4.10",
     "solcik/extras": "^0.5",
+    "symfony/cache": "^7.2",
     "symfony/console": "^7.2",
     "symfony/event-dispatcher": "^7.2",
     "symfony/http-foundation": "^7.2",
