--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,16 @@
 APP_URL=http://vspoint.localhost
+APP_ENV=dev
 
 # -----------------------------------------------------------------------------
 # DB
-DB_DRIVER=pdo_pgsql
+DB_DRIVER=postgresql
 DB_USER=vspoint
 DB_PASS=passw0rd
 DB_NAME=vspoint
 DB_HOST=db
 DB_PORT=5432
+
+DATABASE_URL="postgresql://vspoint:passw0rd@db:5432/vspoint"
 
 # -----------------------------------------------------------------------------
 # REDIS
