phpstan: doctrine: strict with descriptors

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -30,5 +30,16 @@ parameters:
             - sendResponse
     doctrine:
         objectManagerLoader: tests/object-manager.php
+        reportDynamicQueryBuilders: true
+        reportUnknownTypes: true
+        literalString: true
+
+services:
+#    -
+#        class: VsPoint\Infrastructure\PHPStan\Type\Doctrine\Descriptors\ZonedDateTimeType
+#        tags: [phpstan.doctrine.typeDescriptor]
+    -
+        factory: PHPStan\Type\Doctrine\Descriptors\ReflectionDescriptor(Solcik\Doctrine\DBAL\Type\ZonedDateTimeType)
+        tags: [phpstan.doctrine.typeDescriptor]
 
 rules: []
